--- a/exercicios/ex022/imagens/fundo002.html
+++ b/exercicios/ex022/imagens/fundo002.html
@@ -6,9 +6,9 @@
     <title>Personalização dos fundos</title>
     <style>
          body {
-            background-image: url('https://gustavoguanabara.github.io/html-css/imagens/mascote.png');
+            background-image: url('pattern001.png');
             background-size: 100px 100px;
-            background-repeat: repeat-y;
+            background-repeat: no-repeat;
          }
     </style>
 </head>
