--- a/exercicios/ex022/fundo006.html
+++ b/exercicios/ex022/fundo006.html
@@ -6,17 +6,13 @@
     <title>Document</title>
     <style>
         body {
-            height: 97.5vh;
-            background-color: black;
-            background-image: url('imagens/wallpaper002.jpg');
-            background-position: center top;
-            background-repeat: no-repeat;
+            background: black url('imagens/wallpaper002.jpg') center center repeat fixed;
             background-size: cover;
         }
 
         main {
             background-color: white;
-            width: 400px;
+            max-width: 700px;
             padding: 10px;
             margin: auto;
             border: 1px solid darkblue;
@@ -27,6 +23,11 @@
 <body>
     <main>
         <h1>Teste de Imagem de fundo</h1>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quibusdam similique sequi pariatur, dicta nulla, nesciunt est sunt id amet ratione fugit consequuntur vel eius! Reprehenderit eligendi incidunt totam dolor modi. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatum ad ea magnam eaque beatae sed qui neque modi aut pariatur inventore recusandae non, consequuntur asperiores voluptate quis, repudiandae maxime ipsum? Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum dolore quo ipsa iusto doloremque enim ea officiis pariatur sed dolores animi adipisci quidem, obcaecati, maiores veritatis ut, provident atque est.</p>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quibusdam similique sequi pariatur, dicta nulla, nesciunt est sunt id amet ratione fugit consequuntur vel eius! Reprehenderit eligendi incidunt totam dolor modi. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatum ad ea magnam eaque beatae sed qui neque modi aut pariatur inventore recusandae non, consequuntur asperiores voluptate quis, repudiandae maxime ipsum? Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum dolore quo ipsa iusto doloremque enim ea officiis pariatur sed dolores animi adipisci quidem, obcaecati, maiores veritatis ut, provident atque est.</p>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quibusdam similique sequi pariatur, dicta nulla, nesciunt est sunt id amet ratione fugit consequuntur vel eius! Reprehenderit eligendi incidunt totam dolor modi. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatum ad ea magnam eaque beatae sed qui neque modi aut pariatur inventore recusandae non, consequuntur asperiores voluptate quis, repudiandae maxime ipsum? Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum dolore quo ipsa iusto doloremque enim ea officiis pariatur sed dolores animi adipisci quidem, obcaecati, maiores veritatis ut, provident atque est.</p>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quibusdam similique sequi pariatur, dicta nulla, nesciunt est sunt id amet ratione fugit consequuntur vel eius! Reprehenderit eligendi incidunt totam dolor modi. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatum ad ea magnam eaque beatae sed qui neque modi aut pariatur inventore recusandae non, consequuntur asperiores voluptate quis, repudiandae maxime ipsum? Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum dolore quo ipsa iusto doloremque enim ea officiis pariatur sed dolores animi adipisci quidem, obcaecati, maiores veritatis ut, provident atque est.</p>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quibusdam similique sequi pariatur, dicta nulla, nesciunt est sunt id amet ratione fugit consequuntur vel eius! Reprehenderit eligendi incidunt totam dolor modi. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatum ad ea magnam eaque beatae sed qui neque modi aut pariatur inventore recusandae non, consequuntur asperiores voluptate quis, repudiandae maxime ipsum? Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum dolore quo ipsa iusto doloremque enim ea officiis pariatur sed dolores animi adipisci quidem, obcaecati, maiores veritatis ut, provident atque est.</p>
         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quibusdam similique sequi pariatur, dicta nulla, nesciunt est sunt id amet ratione fugit consequuntur vel eius! Reprehenderit eligendi incidunt totam dolor modi. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatum ad ea magnam eaque beatae sed qui neque modi aut pariatur inventore recusandae non, consequuntur asperiores voluptate quis, repudiandae maxime ipsum? Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum dolore quo ipsa iusto doloremque enim ea officiis pariatur sed dolores animi adipisci quidem, obcaecati, maiores veritatis ut, provident atque est.</p>
     </main>
 </body>
