--- a/exercicios/ex023/tabela005.html
+++ b/exercicios/ex023/tabela005.html
@@ -23,10 +23,32 @@
             border: 1px solid black;
             padding: 10px;
         }
+
+        .destaque {
+            background-color: chartreuse;
+        }
+
+        .cnome {
+            background-color: chartreuse;
+        }
+
+        .amarelo {
+            background-color: yellow;
+        }
+
+        .vermelho {
+            background-color: red;
+        }
     </style>
 </head>
 <body>
     <table>
+        <colgroup>
+            <col class="amarelo">
+            <col class="vermelho" span="2">
+            <col class="amarelo">
+        </colgroup>
+        <h1>Exercício de Tabelas</h1>
         <caption>Cadastro</caption>
         <tr>
             <th scope="col">Nome</th>
@@ -42,9 +64,33 @@
         </tr>
         <tr>
             <td>Cláudio</td>
-            <td></td>
-            <td></td>
-            <td></td>
+            <td>M</td>
+            <td>28</td>
+            <td>Programador</td>
+        </tr>
+        <tr>
+            <td>Gustavo</td>
+            <td>M</td>
+            <td>42</td>
+            <td>Professor</td>
+        </tr>
+        <tr>
+            <td>Hélio</td>
+            <td>M</td>
+            <td>19</td>
+            <td>Vendedor</td>
+        </tr>
+        <tr>
+            <td>Maria</td>
+            <td>F</td>
+            <td>39</td>
+            <td>Médica</td>
+        </tr>
+        <tr>
+            <td>Otávio</td>
+            <td>M</td>
+            <td>22</td>
+            <td>Nutricionista</td>
         </tr>
     </table>
 </body>
