--- a/exercicios/ex024/iframe006.html
+++ b/exercicios/ex024/iframe006.html
@@ -13,5 +13,9 @@
     <p><a href="https://vimeo.com/232955578">Looking For Something - Teaser</a> from <a href="https://vimeo.com/cesarpelizer">C&eacute;sar Pelizer</a> on <a href="https://vimeo.com">Vimeo</a>.</p>
     <h2>Mapas do Google</h2>
     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d113590.385988241!2d-48.57368330855445!3d-27.1657414961566!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94d8a6a6f274d185%3A0xf25e2f1c1cb70fef!2sBombinhas%20-%20SC!5e0!3m2!1spt-BR!2sbr!4v1721068133240!5m2!1spt-BR!2sbr" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+    <h2>Mapas do Waze</h2>
+    <iframe src="https://embed.waze.com/iframe?zoom=11&lat=-27.199068&lon=-48.453827&ct=livemap" width="600" height="450" allowfullscreen></iframe>
+    <h2>Google Documents</h2>
+    <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vRESYGdeCqNfIhGz4Mcjc_GMw0OcRr5sS6rCWGxzsX1tTPou1qQTAwjs-YlstWrolrql05fW9BBZUTn/embed?start=false&loop=false&delayms=3000" frameborder="0" width="480" height="299" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
 </body>
 </html>
