--- a/exercicios/ex025/form007.html
+++ b/exercicios/ex025/form007.html
@@ -27,13 +27,18 @@
 
         <p>
             <label for="iprof">Profissão:</label>
-            <input type="text" name="prof" id="iprof">
-            <datalist>
-                <option value="ADM"></option>
-                <option value="CONT"></option>
-                <option value="DEV"></option>
-                <option value="PROF"></option>
+            <input type="text" name="prof" id="iprof" list="lstprof">
+            <datalist id="lstprof">
+                <option value="ADM">Administrador</option>
+                <option value="CONT">Contador</option>
+                <option value="DEV">Desenvolvedor</option>
+                <option value="PROF">Professor</option>
             </datalist>
+        </p>
+
+        <p>
+            <label for="imsg">Mensagem:</label><br>
+            <textarea name="msg" id="imsg" cols="30" rows="10"></textarea>
         </p>
 
         <p>
