--- a/exercicios/ex027/flex007/index.html
+++ b/exercicios/ex027/flex007/index.html
@@ -21,7 +21,7 @@
         }
 
         #i1 {
-            align-self: ;
+            align-self: auto;
         }
 
         #i2 {
@@ -33,7 +33,7 @@
         }
 
         #i4 {
-            align-self: ;
+            align-self: auto;
         }
 
         #i5 {
